--- a/src/SignVsix/SignVsix.csproj
+++ b/src/SignVsix/SignVsix.csproj
@@ -85,6 +85,12 @@
   <ItemGroup>
     <EmbeddedResource Include="VSCT\SignForm.resx" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SignVsix.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
